@@ -1,6 +1,6 @@
-test.py
 torch_experiment.py
 logs/
+paper/
 sounds/
 sounds2/
 dataset/
