@@ -59,34 +59,9 @@ mfcc_model = load_model("checkpoints/model_sp_comb_lstm_fold_0.hdf5",
 val_gen = data_loader.DataGenerator(options,False,False)
 
 
-something, thing = val_gen.__getitem__(0)
-print(type(something))
-print(something.shape)
-
-rmse = np.sqrt(np.sum(np.sum((something - ema_test)**2)))
-print(rmse)
-
-plt.subplot(1,2,1)
-plt.plot(sp_test[0,:,:])
-plt.subplot(1,2,2)
-plt.plot(thing[0,:,:])
-plt.show()
-
-
-rmse = np.sqrt(np.sum(np.sum((thing - sp_test)**2)))
-print(rmse)
-
 mfcc_normalised = mfcc_model.predict_generator(val_gen)
-print(mfcc_model.evaluate_generator(val_gen))
-print(mfcc_model.evaluate(ema_test,sp_test))
-mfcc_normalised_2 = mfcc_model.predict(ema_test).astype(np.float64)
 
-plt.subplot(1,2,1)
-plt.plot(mfcc_normalised[0,:,:])
-plt.subplot(1,2,2)
-plt.plot(mfcc_normalised_2[0,:,:])
 
-plt.show()
 
 mfcc_p_normalised = mfcc_model.predict(path_test).astype(np.float64)
 
@@ -99,14 +74,6 @@ mlpg_p_generated = proc.mlpg_postprocessing(mfcc_p_normalised,
                                             options["bins_1"],
                                             scaler_sp)
 print(mlpg_generated.shape)
-#print("Loss", np.sqrt(np.sum(np.sum((mfcc_normalised - sp_test)**2))))
-#for i in range(len(scaler_sp)):
-#    mfcc_normalised[:,:,i] = scaler_sp[i].inverse_transform(mfcc_normalised[:,:,i])
-
-#print("Loss", np.sum(np.sum((mfcc_normalised - sp_test_u)**2)))
-#print("MelCD-Delta unnormalised", melcd(mfcc_normalised,sp_test_u))
-#print("MelCD", melcd(mlpg_generated,sp_test_u[:,:,:options["bins_1"]]))
-    
 
 # ---------------------- SPEECH SYNTHESIS ----------------------------
 
